# conclave-server-lib

./: CMakeLists.txt  README.md  deps.toml
.github/workflows/: build_linux.yml
src/: CMakeLists.txt
src/examples/: CMakeLists.txt  conclave_deamon  daemon.c  main.c
src/examples/include/conclave-daemon/: daemon.h  version.h
src/include/conclave-server/: address.h  connection_quality.h  members.h  req_challenge.h  req_list_rooms.h  req_packet.h  req_ping.h  req_room_create.h  req_room_join.h  req_room_rejoin.h  req_user_login.h  room.h  room_connection.h  room_connections.h  room_join.h  room_member.h  room_members.h  rooms.h  serialize.h  server.h  transport.h  unique_id.h  user.h  user_session.h  user_sessions.h  users.h
src/lib/: CMakeLists.txt  address.c  connection_quality.c  req_challenge.c  req_list_rooms.c  req_login.c  req_members.c  req_packet.c  req_ping.c  req_room_create.c  req_room_join.c  req_room_rejoin.c  room.c  room_connection.c  room_connections.c  room_members.c  rooms.c  serialize.c  server.c  unique_id.c  user_session.c  user_sessions.c  users.c
